force-app/main/default/objects/leaseworks__Journal_Dimension__c/leaseworks__Journal_Dimension__c.object-meta.xml
<CustomObject>
    <description>Dimensions applicable to journal</description>
    <label>Journal Dimension</label>
    <nameField>
        <label>Journal Dimension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journal Dimensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>