force-app/main/default/objects/leaseworks__Journal_Dimension__c/fields/leaseworks__Dimension__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Dimension__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#7.7 Created for getting the Dimension Id</description>
    <label>Dimension</label>
    <referenceTo>leaseworks__Dimension__c</referenceTo>
    <relationshipLabel>Journal Dimensions</relationshipLabel>
    <relationshipName>Journal_Dimensions</relationshipName>
    <type>Lookup</type>
</CustomField>