force-app/main/default/objects/leaseworks__Journal_Dimension__c/fields/leaseworks__Dimension_Label__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Dimension_Label__c</fullName>
    <formula>leaseworks__Dimension_Value_Rec__r.leaseworks__Analysis_Code__c</formula>
    <inlineHelpText>An alternative name for the dimension.</inlineHelpText>
    <label>Dimension Label</label>
    <type>Text</type>
</CustomField>