force-app/main/default/objects/leaseworks__Journal_Dimension__c/fields/leaseworks__Dimension_Value_Rec__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Dimension_Value_Rec__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#7.7 Created for getting the Dimension Value Id</description>
    <label>Dimension Value</label>
    <referenceTo>leaseworks__Dimension_Value__c</referenceTo>
    <relationshipLabel>Journal Dimensions</relationshipLabel>
    <relationshipName>Journal_Dimensions</relationshipName>
    <type>Lookup</type>
</CustomField>