force-app/main/default/objects/leaseworks__Journal_Dimension__c/fields/leaseworks__Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Transaction_Id__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Z_Unused_2311 Transaction Id</label>
    <type>Text</type>
</CustomField>