force-app/main/default/objects/leaseworks__Journal_Dimension__c/validationRules/leaseworks__Stop_Modify_Journal_Dimension.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Stop_Modify_Journal_Dimension</fullName>
    <active>true</active>
    <description>Stop Modifying the Journal dimension fields</description>
    <errorConditionFormula>!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c</errorConditionFormula>
    <errorMessage>You are Not Allowed to Create/Edit Journal Dimension Records.</errorMessage>
</ValidationRule>